MonetDB5/src/mal/Tests/tst902.mal
# what is the overhead of MAL in multiplex situations
# using a BATloop !! This is 40x slower as the V4.3 multiplex implementation
b:= bat.new(:lng,:lng);
barrier (k,v):= mal.newRange(0:lng);
	bat.insert(b,v,v);
	redo (k,v):= mal.nextElement(1:lng,10:lng);
exit (k,v);

c:= algebra.copy(b);

d:= bat.new(:lng,:lng);
barrier (w,h,t):= chopper.newIterator(b);
	B1:= algebra.find(b,h);
	B2:= algebra.find(c,h);
	t:= B1+B2;
	bat.insert(d,h,t);
	redo (w,h,t):= chopper.hasMoreElements(b);
catch 	GDKerror;
exit	GDKerror;
exit w;
io.print(d);
